style: removal of min-width to avoid breaks in mobile devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -177,7 +177,6 @@
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 500px;
-  min-width: 500px;
 }
 
 .work-timeline h2 {
